--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <h1><b>Nome:</b> Renato Ono da Cruz Azevedo</h1>
     <img src="Minha Foto de Perfil.jpg" alt="" width="250px">
-
-
+    <p class= "descricao"><em> minha foto de Perfil</em></p>
+    <p></p>
+    <h4>Sobre mim:
+        <p>
+            <li> <b> Estudante </b> de Desenvolvimento Web Full Stack da <em>
+                <a href="https://www.betrybe.com/">Trybe</a>
+            </em>
+            </li>
+        </p>
+        <p><li> Vergueiro (Sacomã), São Paulo, SP</li></p>
+        <p><li> Brasileiro</li></p>
+    </h4>
 </body>
 </html>
