Adiciona skills, links internos: sobre mim, foto de perfil,Nome.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,40 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <h1><b>Nome:</b> Renato Ono da Cruz Azevedo</h1>
-    <img src="Minha Foto de Perfil.jpg" alt="" width="250px">
-    <p class= "descricao"><em> minha foto de Perfil</em></p>
+
+    <h1><a href="#Sobre Mim"><b>Nome:</b> Renato Ono da Cruz Azevedo</a></h1>
+
+    <a href="#Sobre Mim"><img src="Minha Foto de Perfil.jpg" alt="" width="250px" id="Minha Foto"></a>
+
+    <p class= "descricao">
+        <em> minha foto de Perfil</em></p>
+
     <p></p>
-    <h4>Sobre mim:
+
+    <h4 id="Sobre Mim"><a href="#Minha Foto">Sobre mim: </a></h4>
         <p>
-            <li> <b> Estudante </b> de Desenvolvimento Web Full Stack da <em>
-                <a href="https://www.betrybe.com/">Trybe</a>
+            <li> Estudante de Desenvolvimento Web Full Stack da <em>
+                <b>
+                    <a href="https://www.betrybe.com/">Trybe</a>
+                </b>
             </em>
             </li>
         </p>
-        <p><li> Vergueiro (Sacomã), São Paulo, SP</li></p>
+
+        <p><li> Reside: Vergueiro (Sacomã), São Paulo, SP</li></p>
+
         <p><li> Brasileiro</li></p>
-    </h4>
+    
+<h4>
+    <em>Skills:</em>
+</h4>
+
+<li>Proatividade</li>
+<li>Determinação</li>
+<li>Inglê C1: Compreensão Fluente.</li>
+
+
+
+
 </body>
 </html>
