--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
     <p class= "descricao">
         <em> minha foto de Perfil</em></p>
 
-    <p></p>
 
     <h4 id="Sobre Mim"><a href="#Minha Foto">Sobre mim: </a></h4>
-        <p>
             <li> Estudante de Desenvolvimento Web Full Stack da <em>
                 <b>
-                    <a href="https://www.betrybe.com/">Trybe</a>
+                    <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
                 </b>
             </em>
             </li>
-        </p>
 
-        <p><li> Reside: Vergueiro (Sacomã), São Paulo, SP</li></p>
+        <li> Reside: Vergueiro (Sacomã), São Paulo, SP</li>
 
-        <p><li> Brasileiro</li></p>
+        <li> Brasileiro</li>
     
+
 <h4>
     <em>Skills:</em>
 </h4>
@@ -38,8 +36,6 @@
 <li>Proatividade</li>
 <li>Determinação</li>
 <li>Inglê C1: Compreensão Fluente.</li>
-
-
 
 
 </body>
